Added the post button and the function that allows the user to post #9

--- a/SnapTalk/android/app/src/main/AndroidManifest.xml
+++ b/SnapTalk/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
   package="com.snaptalk">
 
     <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.CAMERA"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE"/>
 
     <application
       android:name=".MainApplication"
