--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/stack": "^5.1.0",
     "firebase": "^7.9.1",
     "native-base": "^2.13.8",
+    "path": "^0.12.7",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-picker": "^2.3.0",
@@ -35,7 +37,7 @@
     "babel-jest": "^24.9.0",
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
+    "metro-react-native-babel-preset": "^0.56.4",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
