--- a/SnapTalk/package.json
+++ b/SnapTalk/package.json
@@ -10,11 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/native": "^5.0.8",
+    "@react-navigation/stack": "^5.1.0",
+    "firebase": "^7.9.1",
     "native-base": "^2.13.8",
     "navigation": "^5.2.0",
     "react": "^16.9.0",
     "react-native": "0.61.5",
-    "react-navigation": "^4.1.1"
+    "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-image-picker": "^2.3.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.1.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.1.1",
+    "react-navigation-stack": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
