linked the database with the app and implemented push to database from app

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,8 @@ target 'SnapTalk' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNFirebase', :path => '../node_modules/react-native-firebase'
+
   target 'SnapTalkTests' do
     inherit! :search_paths
     # Pods for testing
