--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "firebase": "^7.8.2",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-image-picker": "^2.3.0",
     "react-native-elements": "^1.2.7",
+    "react-native-firebase": "^5.6.0",
+    "react-native-image-picker": "^2.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.1.1"
   },
