--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: "com.android.application"
 
+
+apply plugin: 'com.google.gms.google-services'
+
+
 import com.android.build.OutputFile
 
 /**
@@ -179,6 +183,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-firebase')
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
