--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^1.2.7",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
