--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.61.5",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-picker": "^2.3.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
