Modified travis.yml file for testing, removed chmod +x #6

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ android:
     - addon-google_apis-google-19
 script:
   - cd android
-  - chmod +x ./gradlew assembleDebug
+  - ./gradlew assembleRelease
