Modified travis.yml file for testing, added cmd to change path before install #6

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: android
 before_install:
   - nvm install 6
   - node --version
+  - cd android
   - chmod +x gradlew
+  - cd ..
 install:
   - npm install
 android:
