--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ android:
     - addon-google_apis-google-19
 script:
   - cd android
-  - ./gradlew assembleRelease
+  - ./gradlew assembleRelease --debug
