Modified travis.yml file for testing, forced <yes> to prompts when executing gradle #6

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ android:
     - addon-google_apis-google-19
 script:
   - cd android
-  - ./gradlew assembleRelease --debug
+  - y | ./gradlew assembleRelease --debug
