Modified travis.yml file for testing, removed debug parameter from gradlew #6

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ android:
     - addon-google_apis-google-19
 script:
   - cd android
-  - yes | ./gradlew assembleRelease --debug
+  - yes | ./gradlew assembleRelease
