--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
+    "expo-constants": "^8.0.0",
+    "expo-permissions": "^8.0.0",
     "firebase": "^7.9.1",
     "native-base": "^2.13.8",
     "path": "^0.12.7",
@@ -20,6 +23,7 @@
     "react-native": "0.61.5",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-picker": "^2.3.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
@@ -28,7 +32,8 @@
     "react-native-screens": "^2.0.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.1",
-    "react-navigation-stack": "^2.2.1"
+    "react-navigation-stack": "^2.2.1",
+    "react-navigation-tabs": "^2.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
