Jetified project and set both booleans to true inside gradle.prop file #6

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,7 +18,7 @@
 # org.gradle.parallel=true
 
 android.useAndroidX=true
-android.enableJetifier=false
+android.enableJetifier=true
 
 
-implementation 'androidx.appcompat:appcompat:1.0.0'
+implementation 'androidx.appcompat:appcompat:1.0.2'
