--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-jest": "^24.9.0",
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
+    "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "^0.56.4",
     "react-test-renderer": "16.9.0"
   },
