Reverted and re-added jetify to travis.yml file. #6

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,7 @@ android:
     - extra-google-m2repository
     - addon-google_apis-google-19
 script:
+  - npm i --save -dev jetifier 
+  - npx jetify 
   - cd android
   - ./gradlew assembleRelease --stacktrace
