--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
+    "base-64": "^0.1.0",
     "expo-constants": "^8.0.0",
     "expo-permissions": "^8.0.0",
     "firebase": "^7.9.1",
+    "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "path": "^0.12.7",
     "react": "16.9.0",
