--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: android
 before_install:
-  - nvm install 6
+  - nvm install 13
   - node --version
+  - yes | sdkmanager "platforms;android-28"
+  - cd android
+  - chmod +x gradlew
+  - cd ..
 install:
   - npm install
 android:
@@ -9,13 +13,14 @@ android:
     - tools
     - platform-tools
     - build-tools-28.0.3
-    - android-29
-    - android-19
+    - android-28
     - extra-android-support
     - extra-android-m2repository
     - extra-google-google_play_services
     - extra-google-m2repository
     - addon-google_apis-google-19
 script:
-  - npm run ci
-  - cd android && ./gradlew assembleRelease
+  - npm i --save -dev jetifier 
+  - npx jetify 
+  - cd android
+  - ./gradlew assembleRelease --stacktrace
