--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-constants": "^8.0.0",
     "expo-permissions": "^8.0.0",
     "firebase": "^7.9.1",
+    "mockfirebase": "^0.12.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "navigation": "^5.2.0",
